--- a/index.html
+++ b/index.html
@@ -37,34 +37,83 @@
     </section>
     <!-- end of about-main -->
 
+<!-- start of title-main -->
+ <div class="title-main">
+    <div class="container">
+        <div class="title">
+            <h3>portfolio</h3>
+        </div>
+    </div>
+ </div>
+ <!-- end of title-main -->
+
     <!-- start of porfolio -->
     <section class="portfolio-main">
         <div class="container">
             <div class="portfolio">
                 <div class="box-1 box">
                     <img src="images/portfolio-1.png" alt="">
-                </div>
-                <div class="box-2 box">
                     <h3>marketing page</h3>
                     <p>this project shows the front page of a marketing website meant for a specific business i'm interested in.</p>
                 </div>
-                <div class="box-3 box">
+                <div class="box-2 box">
                     <img src="images/portfolio-2.png" alt="">
+                    <h3>search page</h3>
+                    <p>this project searches through a specific database to find information that the user is trying to look up.</p>
+                </div>
+                <div class="box-3 box">
+                    <img src="images/portfolio-3.png" alt="">
+                    <h3>travel app</h3>
+                    <p>this project compares travel times based on different transporation methods and tells you the best one. </p>
                 </div>
                 <div class="box-4 box">
-                    <h3>search page</h3>
-                    <p>this project searches th</p>
+                    <img src="images/portfolio-4.png" alt="">
+                    <h3>map of favorite spots</h3>
+                    <p>this project uses mapping apis tp plot points for my favorite spots in the city for a do-it-yourself walking tour </p>
                 </div>
-                <div class="box-5 box"></div>
-                <div class="box-6 box"></div>
-                <div class="box-7 box"></div>
-                <div class="box-8 box"></div>
-                <div class="box-9 box"></div>
-                <div class="box-10 box"></div>
-                <div class="box-11 box"></div>
-                <div class="box-12 box"></div>
+                <div class="box-5 box">
+                    <img src="images/portfolio-5.png" alt="">
+                    <h3>photo gallery</h3>
+                    <p>this project shows picture from a recent trip to the viewer and allow them to easily navigate through photos.</p>
+                </div>
+                <div class="box-6 box">
+                    <img src="images/portfolio-6.png" alt="">
+                    <h3>calculater</h3>
+                    <p>someone can enter in the numbers they want,and press the big blue button and get the result.</p>
+                </div>
             </div>
         </div>
     </section>
+    <!-- end of portfolio -->
+
+    <!-- start of conatct -->
+     <section class="contact-main">
+        <div class="container">
+            <div class="contact">
+                <h3>contact</h3>
+                <p>if you're interested in chatting or want more information about what i've been working on,i'd love to hear from you! </p>
+            
+                <p class="contact-p"><span>Phone:-</span>+251946701407</p>
+                <p class="contact-p"><span>Email:-</span>abelassegid9@gmail.com</p>
+            </div>
+        </div>
+     </section>
+     <!-- end of conatct -->
+      <hr>
+     <!-- start of footer-main -->
+      <footer class="footer-main">
+        <div class="container">
+            <div class="footer">
+                <div class="logo"><a href="">student name</a></div>
+                <ul class="menu">
+                    <li><a href="">home</a></li>
+                    <li><a href="">portfilo</a></li>
+                    <li><a href="">contact</a></li>
+                </ul>
+                <h4 class="back">back to top</h4>
+            </div>
+        </div>
+      </footer>
+      <!-- end of footer-main -->
 </body>
 </html>
