--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- end of header-main -->
 
     <!-- start of about-main -->
-    <section class="about-main">
+    <div class="about-main">
         <div class="container">
             <div class="about">
                 <div class="col-2-1">
@@ -34,7 +34,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <!-- end of about-main -->
 
 <!-- start of title-main -->
@@ -99,7 +99,7 @@
         </div>
      </section>
      <!-- end of conatct -->
-      
+
      <!-- start of footer-main -->
       <footer class="footer-main">
         <div class="container">
