--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <div class="header">
                 <div class="logo"><a href="">student name</a></div>
                 <ul class="menu">
-                    <li><a href="">home</a></li>
-                    <li><a href="">portfilo</a></li>
-                    <li><a href="">contact</a></li>
+                    <li><a href="#">home</a></li>
+                    <li><a href="#title">portfilo</a></li>
+                    <li><a href="#contact">contact</a></li>
                 </ul>
             </div>
         </div>
@@ -38,7 +38,7 @@
     <!-- end of about-main -->
 
 <!-- start of title-main -->
- <div class="title-main">
+ <div class="title-main" id="title">
     <div class="container">
         <div class="title">
             <h3>portfolio</h3>
@@ -87,7 +87,7 @@
     <!-- end of portfolio -->
 
     <!-- start of conatct -->
-     <section class="contact-main">
+     <section class="contact-main" id="contact">
         <div class="container">
             <div class="contact">
                 <h3>contact</h3>
@@ -106,9 +106,9 @@
             <div class="footer">
                 <div class="logo"><a href="">student name</a></div>
                 <ul class="menu">
-                    <li><a href="">home</a></li>
-                    <li><a href="">portfilo</a></li>
-                    <li><a href="">contact</a></li>
+                    <li><a href="#">home</a></li>
+                    <li><a href="#title">portfilo</a></li>
+                    <li><a href="#contact">contact</a></li>
                 </ul>
                 <h4 class="back">back to top</h4>
             </div>
