--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <li><a href="#title">portfilo</a></li>
                     <li><a href="#contact">contact</a></li>
                 </ul>
-                <h4 class="back">back to top</h4>
+                <h4 class="back"><a href="">back to top</a></h4>
             </div>
         </div>
       </footer>
